# CVIDS

./: README.md
OpenChisel/chisel_ros/launch/: sample.launch
OpenChisel/chisel_ros/src/: ChiselNode.cpp  ChiselServer.cpp
OpenChisel/config/: sample.rviz
OpenChisel/open_chisel/include/open_chisel/: ProjectionIntegrator.h
OpenChisel/open_chisel/include/open_chisel/weighting/: ConstantWeighter.h
OpenChisel/open_chisel/src/: ChunkManager.cpp
agent_msg/: CMakeLists.txt
agent_msg/msg/: AgentMsg.msg  KeyFrameMsg.msg
camera_model/include/camodocal/camera_models/: PinholeCamera.h
config/euroc/: euroc_config_multi_agent.yaml  euroc_config_multi_agent_V1.yaml
config/mynteye/: mynteye_d_config.yaml
config/realsense/: realsense_color_config.yaml
config/tum/: tum_config.yaml
server_pose_graph/: CMakeLists.txt  package.xml
server_pose_graph/include/: collaborative_server_system.h  parameters.h  pcm_graph.h  server_brief_extractor.h  server_camera.h  server_keyframe.h  server_plotter.h  server_pose_graph.h
server_pose_graph/include/dense_mapping/: calc_cost.h  dense_mapping_parameters.h  depth_estimator.h  depth_filter.h  depth_filter_backup.h  sgm_stereo_mapper.h
server_pose_graph/include/fmc/: findClique.cpp  findClique.h  findCliqueHeu.cpp  pcm.cpp  pcm.h  utils.cpp
server_pose_graph/include/optimizer/: smooth_euler_optimizer.h
server_pose_graph/include/pcm/: pcm_volume.h
server_pose_graph/include/utility/: server_utility.h  server_visualization.h
server_pose_graph/launch/: collaborative.launch  collaborative_realsense.launch  collaborative_viorb.launch  multi_agent_server.launch
server_pose_graph/src/: collaborative_server_node.cpp  collaborative_server_system.cpp  parameters.cpp  pcm_graph.cpp  server_brief_extractor.cpp  server_camera.cpp  server_keyframe.cpp  server_pose_graph.cpp
server_pose_graph/src/dense_mapping/: calc_cost.cu  dense_mapping_parameters.cpp  depth_estimator.cpp  depth_filter.cpp  depth_filter_backup.cpp  sgm_stereo_mapper.cpp
server_pose_graph/src/optimizer/: smooth_euler_optimizer.cpp
server_pose_graph/src/utility/: server_utility.cpp  server_visualization.cpp
